fix: arrow and hours alignment

--- a/apps/gauzy/src/app/@shared/timesheet/activities/activity-item/activity-item.component.scss
+++ b/apps/gauzy/src/app/@shared/timesheet/activities/activity-item/activity-item.component.scss
@@ -40,3 +40,7 @@
 .clickable {
   cursor: pointer;
 }
+
+.arrow{
+  width: 32px;
+}
